# ALICE-ML

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-COMMERCIAL.md  README.md  README_JP.md  pyproject.toml
.github/workflows/: ci.yml
benches/: matmul.rs
bindings/ue5/: AliceMl.h
bindings/unity/: AliceMl.cs
examples/: elyza_ternary.rs  qwen_qat_test.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_matvec.rs  fuzz_quantize.rs
src/: arena.rs  dataset.rs  db_bridge.rs  error_analysis.rs  ffi.rs  layer.rs  lib.rs  llama3_ternary.rs  micro_model.rs  model_io.rs  moe.rs  neon.rs  ops.rs  python.rs  quantize.rs  safetensors.rs  speculative.rs  streaming.rs  tensor.rs  training.rs
