[package]
name = "alice-ml"
version = "0.1.0"
edition = "2021"
authors = ["Moroya Sakamoto"]
description = "1.58bit Ternary Inference Engine - Multiplication is expensive. Addition is all you need."
license = "AGPL-3.0"
repository = "https://github.com/ext-sakamoro/ALICE-ML"
keywords = ["machine-learning", "inference", "quantization", "bitnet", "simd"]
categories = ["science", "no-std"]

[lib]
name = "alice_ml"
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
default = ["std"]
std = []
simd = []       # Enable hand-tuned SIMD kernels
parallel = ["dep:rayon"]  # Enable Rayon parallel batch processing
pyo3 = ["dep:pyo3", "dep:numpy", "std"]  # Python bindings

[dependencies]
rayon = { version = "1.10", optional = true }
pyo3 = { version = "0.27", features = ["extension-module"], optional = true }
numpy = { version = "0.27", optional = true }

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "matmul"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
opt-level = 3
lto = "thin"
debug = false
codegen-units = 1
