[package]
name = "alice-ml"
version = "0.2.0"
edition = "2021"
authors = ["Moroya Sakamoto <sakamoro@alicelaw.net>"]
description = "1.58bit Ternary Inference Engine - Multiplication is expensive. Addition is all you need."
license = "AGPL-3.0-only OR Commercial"
repository = "https://github.com/ext-sakamoro/ALICE-ML"
keywords = ["machine-learning", "inference", "quantization", "bitnet", "simd"]
categories = ["science", "no-std"]
publish = false

[lib]
name = "alice_ml"
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
default = ["std"]
std = []
ffi = ["std"]   # C-ABI FFI (51 extern "C" functions)
simd = []       # Enable hand-tuned SIMD kernels (AVX2 on x86_64)
neon = []       # Enable hand-tuned NEON kernels (ARM aarch64)
parallel = ["dep:rayon"]  # Enable Rayon parallel batch processing
pyo3 = ["dep:pyo3", "dep:numpy", "std"]  # Python bindings
db = ["dep:alice-db", "std"]  # ALICE-DB training metrics persistence
safetensors = ["std"]  # Safetensors format parser + Llama-3 ternary inference

[dependencies]
rayon = { version = "1.10", optional = true }
pyo3 = { version = "0.27", features = ["extension-module"], optional = true }
numpy = { version = "0.27", optional = true }
alice-db = { path = "../ALICE-DB", optional = true, default-features = false }

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
tempfile = "3"
tokenizers = "0.21"
serde_json = "1"

[[bench]]
name = "matmul"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
opt-level = 3
lto = "thin"
debug = false
codegen-units = 1
