[package]
name = "alice-ml-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.alice-ml]
path = ".."
features = ["std"]

[[bin]]
name = "fuzz_matvec"
path = "fuzz_targets/fuzz_matvec.rs"
doc = false

[[bin]]
name = "fuzz_quantize"
path = "fuzz_targets/fuzz_quantize.rs"
doc = false

[workspace]
members = ["."]
